fixed some spacing

--- a/src/scss/_verse-2.scss
+++ b/src/scss/_verse-2.scss
@@ -275,9 +275,9 @@
 }
 
 .verse-2-wrapper {
-  padding-top: 70vh;
+  padding-top: 50vh;
 }
 
 .verse-2-trigger-scene-8 {
-  height: 80vh;
+  height: 70vh;
 }
